プロットテンプレート作成

--- a/裁判員裁判物語.md
+++ b/裁判員裁判物語.md
@@ -1,44 +1,7 @@
-"# IdeaMemo" 
-【簡単プロットテンプレート】
-
-１．物語のアイデアの種： （例：不思議な力を持つ少年が、故郷を救う旅に出る）
-
-２．主要な登場人物：
-
-主人公：（名前、性格、目標など）
-
-敵役：（名前、目的、主人公との関係など）
-
-協力者：（名前、主人公との関係、どんな助けをしてくれるかなど）
-
-３．物語の始まり：
-
-主人公は〇〇な場所に住んでいて、△△な問題を抱えている。
-
-そんな時、□□という出来事が起こり、物語が動き出す。
-
-４．物語の中盤：
-
-主人公は目標である△△を達成するために、〇〇をする。
-
-その過程で、□□という困難に立ち向かう。
-
-また、△△という人物と出会い、〇〇な出来事がある。
-
-（必要に応じて、さらに場面を追加しましょう）
-
-５．物語の結末：
-
-主人公は最終的に〇〇を達成する（または、しない）。
-
-そして、〇〇という感情を抱く。
-
-物語を読み終えた読者に、〇〇という印象を与えたい。
-
-## ✅ プロット構成要素
-
-### ①【全体あらすじ】（400～600字）
-
+# 物語のアイデアの種
+なぜか何度も裁判員になる男の逆転裁判物語
+裁判員に選ばれるのは、衆議院議員選挙権のある人間
+## ①【全体あらすじ】（400～600字）
 → 物語全体の核、主題、展開の輪郭を一気に伝えるまとめ文。
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
@@ -76,38 +39,24 @@
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 
-### ②【登場人物】（キャラ相関図またはリスト）
+## 主要な登場人物（キャラ相関図またはリスト）
 
 * 主人公（例：月見里（やまなし））
-* 主要人物（同僚教師・校長・生徒たち）
-* 生徒側のキーパーソン（味方／対立／謎の子）
-* 黒幕または背後関係者
+なぜか転勤先で裁判員に選ばれる男
 
-### ③【舞台・環境設定】
+## 【舞台・環境設定】
 
 * 学校：治安の良さ、管理体制、教師陣の特徴
 * 街：近隣の環境（商店街、住宅地、繁華街）
 * 仕掛け：ゲームポイントの仕組み（物語のキー）
 
-### ④【章立て＋あらすじ（起承転結）】
-
+## 章立て＋あらすじ（起承転結）】
+### 物語の始まり
 * **導入（第1章）**：風祭の赴任、いたずら、生徒との距離感
+### 物語の中盤
 * **発展（第2～3章）**：不審火・万引きなど事件発生、共通点の兆し
 * **転換（第4～5章）**：カツアゲ事件、繋がる点と黒幕の輪郭
+# 物語の結末：
 * **結末（第6章）**：最終対決・風祭の成長・解決と余韻
 
----
 
-## 📌 この構成の良いところ
-
-* 最初に全体像があることで「読者が迷わない」
-* 登場人物や環境設定があることで「物語の厚み」が出る
-* 章立てあらすじで「物語の進行計画」が見える
-* 実際に執筆する際に迷いにくく、プロットだけで売り込みも可能
-
----
-
-## ✍️ もしよければ、次のステップとして：
-
-* ①の「400～600字の全体あらすじ」を今のアイデアでこちらで試作できます。
-* また②③④も順番に一緒に整理していけます。
