--- a/裁判員裁判物語.md
+++ b/裁判員裁判物語.md
@@ -1,5 +1,5 @@
 # 物語のアイデアの種
-なぜか何度も裁判員になる男の逆転裁判物語
+なぜか何度も裁判員になる男と判事の逆転物語
 裁判員に選ばれるのは、衆議院議員選挙権のある人間
 ## ①【全体あらすじ】（400～600字）
 → 物語全体の核、主題、展開の輪郭を一気に伝えるまとめ文。
