主人公設定やら時代背景などすこし整理

--- a/裁判員裁判物語.md
+++ b/裁判員裁判物語.md
@@ -41,14 +41,80 @@
 
 ## 主要な登場人物（キャラ相関図またはリスト）
 
-* 主人公（例：月見里（やまなし））
+* 主人公１
+月見里　有　（やまなし　ゆう）
+平成7年10月3日　千葉県生まれ　
+職業　ソフトウェア開発者　客先に問題解決のヒントがあるをモットーに
 なぜか転勤先で裁判員に選ばれる男
+裁判中は裁判員１号から6号までを経験した裁判員になるべくして生まれた確率の神に愛された男
+趣味　組み込みプログラミングとバドミントン
+　　　組み込みセンサーと小型コンピュータを組み合わせてちょっと面白いものを作ることを楽しみにしている
+
+* 主人公２
+遠山　英樹（とうやま　ひでき）
+平成7年4月9日　三重県生まれ
+職業　判事
+少年時代はジュニアモトクロスの選手だったが、中学の時両親を事件で失う
+その後、モトクロス選手時代の縁で地元の工務店の親方の元で働きながら勉強をして、予備試験を経て19歳で判事補任官。
+司法修習時代に、高卒認定、大検をとるものの、別名中卒判事
+略歴
+司法試験合格	17歳	
+司法修習（1年）	18歳	
+判事補任官	19歳	
+判事昇任（10年後）	29歳	
+高等裁判所判事など昇任	40歳〜	
+
 
 ## 【舞台・環境設定】
 
-* 学校：治安の良さ、管理体制、教師陣の特徴
-* 街：近隣の環境（商店街、住宅地、繁華街）
-* 仕掛け：ゲームポイントの仕組み（物語のキー）
+月見里の転勤先で起きた事件の裁判員記録
+# 最初の事件
+内装工事現場殺人事件、（釘トリック）
+最初の容疑者無罪＜－月見里と遠山の気づきにより冤罪を防ぐ
+その後、真犯人を見破った遠山により、真犯人の証拠をつかみ事件は解決へとつながる
+（課題、捜査調書にはもう一人とばっちりを受けた人間がいる。どう関係させるかは考え中）
+
+# 第2の事件
+別荘地毒殺事件（スズランか彼岸花のしずく飲むトリックかドクツルタケ鍋食べる事件）
+（課題、捜査調書にはもう一人とばっちりを受けた人間がいる。どう関係させるかは考え中）
+
+
+# 第3の事件
+　闇バイト始末人事件
+　闇バイトに携わったと思われる、受け子が殺された事件
+　受け子が持っていたお金は被害者に返されたため、世間は現代のねずみ小僧か中村主水のごとく持ち上げる
+　やりづらい裁判が始まった
+　　現場に残された証拠。
+　　やり手の弁護士たい新人検事
+　　裁判員にいる社会的地位ある立場にありながら感情的な人間の「俺に言わせれば、こういう不良は云々」発言の連続
+（課題、捜査調書にはもう一人とばっちりを受けた人間がいる。どう関係させるかは考え中）
+
+# 第4の事件
+番外地アウトロー襲撃事件
+江戸川と旧江戸川にはさまれた河原を密かにねぐらにしていた。ハングレが５人殺された。
+いずれもトクリュウの幹部と海外組織とのつながりを担っていたと思われ、本庁は監視を続けつつ、警視庁と千葉県警のどちらが担当するかもめていた時代もトクリュウ対策班の誕生で速やかに編成されるようになった。
+全員の死亡と火災により現場の状態は異常に荒れていた。
+（課題、捜査調書にはもう一人とばっちりを受けた人間がいる。どう関係させるかは考え中）
+
+
+# 対黒幕
+　１年後、遠山は高裁の判事に昇格していた。仙台高等裁判所が赴任地である。
+
+　遠山は判決後の展開に一つの仮説を思いつく
+　　「証拠固めをしている最中の闇バイト従事者が殺されている・・・・まさか口封じ？」
+　　そして4つの事件の共通点に気が付く、
+　　　犯人は犯罪者というよりはむしろ正義感
+　　　なぜか、闇バイトの人間の行動をつかめた
+　　　妙な高揚感で正義の天誅を果たしたと思っている。
+　　　被害者は全員警察が証拠固めをしている人間だった。
+　　　第１から第３までは関東での事件だったのに、トクリュウ強化後発生した第4の事件は地方・・・これは何を意味するのか？
+
+　　　まさか月見里が後ろで意図を引いていた？いや、そんな様子はなかった。第一真相を暴くメリットがない。
+
+　　　遠山は改めて事件関係資料を読み直す。
+　　　奇妙なことに気が付いた。もう一人すべての事件にかかわっていた人間がいたのだ。すべての現場でとばっちりを受けていた第二の被害者ともいうべき人間がいた。その人間こそすべての犯人を陰から操っていた。
+　　　ゆがんだ正義感が起こした正義の秘密組織のリーダーっぽい言動。
+　　　しかし裏では、すべての犯罪のマネーロンダリングにかかわり、証拠が残らないよう適度に犯人グループのリセットを行いながら、闇のお金の入りと出で儲けていた。
 
 ## 章立て＋あらすじ（起承転結）】
 ### 物語の始まり
