キャラっ設定一部追加

--- a/裁判員裁判物語.md
+++ b/裁判員裁判物語.md
@@ -3,36 +3,55 @@
 裁判員に選ばれるのは、衆議院議員選挙権のある人間
 ## ①【全体あらすじ】（400～600字）
 → 物語全体の核、主題、展開の輪郭を一気に伝えるまとめ文。
+運命に導かれた裁判員月見里と運命を跳ね返した中卒判事遠山コンビの裁判。
+ガチャは当たる人間には当たる。たとえどんなに低確率でもゼロじゃない。
+凶器の無い殺人事件
+謎の別荘地毒殺事件
+闇バイト始末人事件
+番外地アウトロー襲撃事件
+いくつもの事件で対峙する二人の物語、そして浮かび上がる悪の存在。
+
+ー１．０　プロローグ
+黒幕の少年時代の話。
+月見里の少年時代
+
+
+０　裁判所からの招待状
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 
+１　内装工事現場殺人事件
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 
+２　謎の別荘地毒殺事件
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 
+３　闇バイト始末人事件
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 
+４　番外地アウトロー襲撃事件
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 
+５　黒幕との対決
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
@@ -43,7 +62,7 @@
 
 * 主人公１
 月見里　有　（やまなし　ゆう）
-平成7年10月3日　千葉県生まれ　
+平成7年4月19日　千葉県生まれ　
 職業　ソフトウェア開発者　客先に問題解決のヒントがあるをモットーに
 なぜか転勤先で裁判員に選ばれる男
 裁判中は裁判員１号から6号までを経験した裁判員になるべくして生まれた確率の神に愛された男
@@ -52,11 +71,11 @@
 
 * 主人公２
 遠山　英樹（とうやま　ひでき）
-平成7年4月9日　三重県生まれ
+平成7年10月3日　三重県生まれ
 職業　判事
-少年時代はジュニアモトクロスの選手だったが、中学の時両親を事件で失う
-その後、モトクロス選手時代の縁で地元の工務店の親方の元で働きながら勉強をして、予備試験を経て19歳で判事補任官。
-司法修習時代に、高卒認定、大検をとるものの、別名中卒判事
+中学の時両親を事件で失う
+その後、地元の工務店の親方の元で働きながら勉強をして、予備試験を経て19歳で判事補任官。
+司法修習時代に、高卒認定、大検をとるものの、別名は中卒判事のまま
 略歴
 司法試験合格	17歳	
 司法修習（1年）	18歳	
