仮タイトルまで決まったので、コミット

--- a/裁判員裁判物語.md
+++ b/裁判員裁判物語.md
@@ -1,29 +1,32 @@
+# 仮タイトル
+レアケース
+～中卒判事とベテラン裁判員の事件手帳～
+
+
 # 物語のアイデアの種
 なぜか何度も裁判員になる男と判事の逆転物語
 裁判員に選ばれるのは、衆議院議員選挙権のある人間
 ## ①【全体あらすじ】（400～600字）
 → 物語全体の核、主題、展開の輪郭を一気に伝えるまとめ文。
-運命に導かれた裁判員月見里と運命を跳ね返した中卒判事遠山コンビの裁判。
-ガチャは当たる人間には当たる。たとえどんなに低確率でもゼロじゃない。
+6が10回出たサイコロの次に6が出る確率は？1/6
+確率の運命に導かれた裁判員と中卒判事コンビの事件簿
 凶器の無い殺人事件
 謎の別荘地毒殺事件
 闇バイト始末人事件
 番外地アウトロー襲撃事件
-いくつもの事件で対峙する二人の物語、そして浮かび上がる悪の存在。
+いくつもの事件で共闘する二人、そして浮かび上がる悪の存在。
+
 
 ー１．０　プロローグ
 黒幕の少年時代の話。
-月見里の少年時代
+　いじめられた過去
+　支配する側に回る
 
 
-０　裁判所からの招待状
-〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
-〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
-〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
-〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
-〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
+閑話
+バイク盗難（月見里の犯罪を憎む理由と適当な操作に怒る理由）
 
-１　内装工事現場殺人事件
+０　裁判所からの招待状 内装工事現場殺人事件
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
@@ -38,6 +41,7 @@
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 
 ３　闇バイト始末人事件
+ヤバい5人の裁判員と月見里
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
@@ -63,11 +67,12 @@
 * 主人公１
 月見里　有　（やまなし　ゆう）
 平成7年4月19日　千葉県生まれ　
-職業　ソフトウェア開発者　客先に問題解決のヒントがあるをモットーに
-なぜか転勤先で裁判員に選ばれる男
-裁判中は裁判員１号から6号までを経験した裁判員になるべくして生まれた確率の神に愛された男
-趣味　組み込みプログラミングとバドミントン
+職業　ソフトウェア開発者　客先に問題解決のヒントがあるをモットーに現場を渡り歩く
+なぜか転勤先で裁判員に選ばれる
+裁判中は裁判員１号から6号までを経験した裁判員になるべくして生まれた確率の神に愛されているというか、良くも悪くも確率論を覆すような体験の持ち主
+趣味　オートバイジムカーナとバドミントン、他にもセンサーとコンピュータ工作
 　　　組み込みセンサーと小型コンピュータを組み合わせてちょっと面白いものを作ることを楽しみにしている
+愛車　CB1300SF SC40キャブ仕様父親からの譲りものをコツコツとメンテナンスして乗っている
 
 * 主人公２
 遠山　英樹（とうやま　ひでき）
@@ -75,7 +80,8 @@
 職業　判事
 中学の時両親を事件で失う
 その後、地元の工務店の親方の元で働きながら勉強をして、予備試験を経て19歳で判事補任官。
-司法修習時代に、高卒認定、大検をとるものの、別名は中卒判事のまま
+司法修習時代に、高卒認定、大検をとるものの、別名は中卒判事
+愛車はSERROW225
 略歴
 司法試験合格	17歳	
 司法修習（1年）	18歳	
@@ -83,8 +89,22 @@
 判事昇任（10年後）	29歳	
 高等裁判所判事など昇任	40歳〜	
 
+* 黒幕
+　事件全体にかかわり、ある目的のために裏で糸を引く
+　転校をきっかけに小学校時代にいじめられる
+　引きこもりがちになりながらパソコンに目覚める
+　中学に上がったころただある日、黒幕はネット社会では年齢性別が関係ないことに気が付く。
+　スマートフォンの不良向けメッセージアプリを開発（履歴が消える便利仕様、黒幕は保存する。）
+　地元の不良たちが恐れる謎のボスに成り上がる。
+　疑いをもたれないよう自分は適度に虐められます。
+　自分が指示を出しているいじめ行為だから対処も知っている。
+　心は折れずに耐えられるどころか、心の中でせせら笑っています。
+　たまにいるやりすぎた子は、なぜか不慮の事故にあいます。
+　ゆがんだいじめの乗り越え方に味を占めた黒幕は、以降犯罪寄の選択肢を選ぶようになっていく。
+　高校に入るころ、彼には自動販売機が金庫にしか見えなくなった。
 
 ## 【舞台・環境設定】
+
 
 月見里の転勤先で起きた事件の裁判員記録
 # 最初の事件
