思いついたネタや、レアケースのタイムラインの整理

--- a/レアケース/裁判員裁判物語.md
+++ b/レアケース/裁判員裁判物語.md
@@ -24,9 +24,52 @@
 
 
 閑話
-バイク盗難（月見里の犯罪を憎む理由と適当な操作に怒る理由）
+バイク盗難（月見里の犯罪を憎む理由と適当な捜査に怒る理由）
 
-０　裁判所からの招待状 内装工事現場殺人事件
+０　裁判所からの招待状
+月見里有、職業ソフトウェアエンジニア。現場たたき上げで、プログラムを書くだけではなく、色々な立場をメンバーとして、
+月見里のもとに1通の封書が届く、差出人の名は「最高裁判所」！！！
+何かやった？特殊詐欺？最高裁判所の方から来たとか？それならこんなお金使った手は使わない。
+「裁判員裁判候補者」に選ばれました。
+え、どういうこと？
+最高裁裁判所から届いた封書の中身は翌年の裁判員の候補になった通知だった。
+「え？私なにかやった？いや、これ特殊詐欺でしょ。それなら封書じゃないか。」
+今は候補という事で、また連絡が来るという事らしい。
+
+翌年3月、選出された旨の連絡が来る。
+いや無理っす。「単位が・・・・」辞退の連絡を入れる。
+6月、再度選出されたとの連絡が来る。呼び出しは8月らしい、夏休みだし引き受ける。断る理由ツーリングじゃ無理だよね。
+事件の内容は・・・・いかなきゃわからない。
+
+１　ファーストケース　木は森に隠せ（内装工事現場殺人事件）
+裁判官A　八木　洋（45歳　判事）
+裁判官B　鹿野山　洋子（30歳 判事補）
+裁判官C　遠山　英樹（20歳　判事補）
+
+裁判員１　神宮寺　学（40歳　コンビニオーナー　ようやく複数店舗をもって
+裁判員２　月見里　有（主人公１　20歳　当時大学生）
+裁判員３　時任　日奈子（35歳　主婦）
+裁判員４　米倉　真紀（28歳　ショップ店員）
+裁判員５　上大岡　進（48歳会社員　管理職）
+裁判員６　竹山　信夫（65歳　会社役員）
+
+予備裁判員１　有坂　恵（38歳　主婦）
+予備裁判員２　田中　太一（35歳　作家）
+
+1回目：冒頭陳述、起訴状読み上げ、弁護人意見陳述
+犯行の悪質性
+被害者に与えた結果
+再犯の可能性
+犯行の動機
+2回目：証拠調べ
+3回目：証拠調べ
+4回目：被告人質問
+感想を言い合う
+5日目　審議、中間投票
+6日目　審議、最終投票
+7日目　判決言い渡し
+刑期の決め方
+投票にはルールがあって、重いほうの5人の中には裁判官が必ず1人は入っていないといけないというものだ。つまり、裁判員6人全員が死刑に投票しても、裁判官がそこに1人も含まれていなければ、死刑になることはない。
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
 〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇〇
