--- a/レアケース/裁判員裁判物語.md
+++ b/レアケース/裁判員裁判物語.md
@@ -46,15 +46,15 @@
 裁判官B　鹿野山　洋子（30歳 判事補）
 裁判官C　遠山　英樹（20歳　判事補）
 
-裁判員１　神宮寺　学（40歳　コンビニオーナー　ようやく複数店舗をもって
+裁判員１　神宮寺　学（40歳　コンビニオーナー　ようやく複数店舗をもてるようになって時間が自由になった）
 裁判員２　月見里　有（主人公１　20歳　当時大学生）
 裁判員３　時任　日奈子（35歳　主婦）
 裁判員４　米倉　真紀（28歳　ショップ店員）
 裁判員５　上大岡　進（48歳会社員　管理職）
-裁判員６　竹山　信夫（65歳　会社役員）
+裁判員６　竹山　信夫（69歳　会社役員）
 
 予備裁判員１　有坂　恵（38歳　主婦）
-予備裁判員２　田中　太一（35歳　作家）
+予備裁判員２　田中　太一（45歳　作家）
 
 1回目：冒頭陳述、起訴状読み上げ、弁護人意見陳述
 犯行の悪質性
@@ -133,6 +133,7 @@
 高等裁判所判事など昇任	40歳〜	
 
 * 黒幕
+真久部　黒鵜
 　事件全体にかかわり、ある目的のために裏で糸を引く
 　転校をきっかけに小学校時代にいじめられる
 　引きこもりがちになりながらパソコンに目覚める
