メモいろいろ追加

--- a/アスリート姉妹の物語/アイデア.md
+++ b/アスリート姉妹の物語/アイデア.md
@@ -20,5 +20,19 @@
 努力の階段が見えなかった事です。 
 けっこう、全国スポーツ部活であるあるなんじゃないかと思った次第。 
 
-最期は、それぞれの住処で、バド最強の数学の先生（姉）とバド最強の体育の先生（妹）で、全国で戦います。
+最期は、それぞれの住処で、日本で一番バドミントンが強い数学の先生（姉）と世界で一番バドミントンが強い体育の先生（妹）が赴任先の学校で顧問になる。教え子のチームが全国で戦い、優しく見守ります。
 
+
+
+その他、設定思い付き
+チームメイト、ライバル、コーチ、保護者
+チームメイトたち
+ジュニアのチームメイトそれほどうまくない上に、練習はサボる子。だけど中学入りたては中学初めの子供たちからはちやほやされる。
+　（大抵半年で追いつかれて、心が荒れるのでチームリーダーがどう対処するのかが大問題）
+才能はあるけど練習嫌い
+真面目だけど能力低い子
+
+事件
+他県で事件を起こして出場辞退になった生徒が転校して加入する。
+　実際には、他の子の犯罪に巻き込まれただけだが、問題が公になり出場辞退になる。真実の追及はなく、半ば追放の様に転校を余儀なくされた子だった。
+練習嫌いの子のマイナスリーダーシップによる部活の堕落
