--- a/リーガルライダー.md
+++ b/リーガルライダー.md
@@ -1,6 +1,16 @@
+前に考えたネタをピックアップ
+司法修習時代に出会ったロードレースが趣味の3人赴任先が一致して合流（判事、検事、弁護士ー独立の町弁で国選も受けるー）がともにチームを結成して鈴鹿４時間耐久を目指す話。チーム監督はやはり同じ地区に住むベテランたたき上げ現役刑事の先輩。
+チーム内でしのぎを削りながら、法廷でバトルを繰り広げて真相を暴くという設定。 
+
+
+４耐の準備と、事件が絡むとどうなるかな？
+鈴鹿４時間耐久はもう終わっているので、新たにST600クラスカテゴリの架空のレースにする。
+ 
+
+テーマになる事件を考えてない時点で何も決まっていないに近いレベルですが・・・・検事、弁護士、と判事は事件発生から、仕事のタイミングがずれてるからね。いっそチーム監督が一番たたき上げの刑事でしょっちゅう事件で駆けずり回って、練習ドタキャン常連とか。公と私で立場が完全逆転してる状態をうまく描けたら面白そうだなと思った。 
+
+
 同期司法修習生がライディングチーム結成4耐を目指す。
-
-
 
 職業と趣味の動線が一致すると、キャラ同士の衝突・共闘のレイヤーが自然に二重化する。
 司法修習＋ロードレースという組み合わせは、その中でも特に相性が良い。
